--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV = development
 
-DB_URL = 'mongodb://localhost/dankbook'
+DB_URL = 'mongodb+srv://admin:i_love_it_but_i_hate_the_taste@dankbook-gtjp8.mongodb.net/test?retryWrites=true'
 
 API_PATH = '/api/v1'
