--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
-    "babel-core": "^6.26.3",
+    "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "nodemon": "^1.18.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "redux": "^4.0.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   }
