--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 NODE_ENV = development
 
-DB_URL = 'mongodb+srv://admin:i_love_it_but_i_hate_the_taste@dankbook-gtjp8.mongodb.net/test?retryWrites=true'
+# DB_URL = 'mongodb+srv://admin:i_love_it_but_i_hate_the_taste@dankbook-gtjp8.mongodb.net/test?retryWrites=true'
+DB_URL = 'mongodb://admin:p4ssw0rd@ds035965.mlab.com:35965/dankbook'
 
 API_PATH = '/api/v1'
