--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "nodemon": "^1.18.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
