--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.16.1",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.5.1",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
@@ -32,12 +33,17 @@
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
     "classnames": "^2.2.6",
+    "css-loader": "^2.1.1",
     "nodemon": "^1.18.11",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   }
