Create and get posts

--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ DB_URL = 'mongodb+srv://admin:i_love_it_but_i_hate_the_taste@dankbook-gtjp8.mong
 
 API_PATH = '/api/v1'
 SECRET_JWT_KEY = 'HEHEHE'
+
+PORT = 4000
+
+CLOUDINARY_CLOUD_NAME = 'doa1nvqo9'
+CLOUDINARY_API_KEY = '699958235732942'
+CLOUDINARY_API_SECRET = 'PryEEsSuKwrzS-eeC_gFIsaQXJE'
