--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
-    "connect-flash": "^0.1.1",
+    "cloudinary": "^1.14.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
+    "fs-extra": "^7.0.1",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.5.1",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "timeago.js": "^4.0.0-beta.2",
     "validator": "^10.11.0"
   },
   "devDependencies": {
