--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV = development
 
-DB_URL = 'mongodb+srv://admin:i_love_it_but_i_hate_the_taste@dankbook-gtjp8.mongodb.net/test?retryWrites=true/dankbook'
-# DB_URL = 'mongodb://admin:p4ssw0rd@ds035965.mlab.com:35965/dankbook'
+# DB_URL = 'mongodb+srv://admin:i_love_it_but_i_hate_the_taste@dankbook-gtjp8.mongodb.net/test?retryWrites=true/dankbook'
+DB_URL = 'mongodb://admin:p4ssw0rd@ds035965.mlab.com:35965/dankbook'
 
 API_PATH = '/api/v1'
 SECRET_JWT_KEY = 'HEHEHE'
