Add profiles search functionallity

--- a/.env
+++ b/.env
@@ -4,9 +4,11 @@ NODE_ENV = development
 DB_URL = 'mongodb://admin:p4ssw0rd@ds035965.mlab.com:35965/dankbook'
 
 API_PATH = '/api/v1'
-SECRET_JWT_KEY = 'HEHEHE'
-
 PORT = 4000
+
+SECRET_JWT_KEY = 'HEHEHE'
+# 1 day
+TOKEN_EXPIRATION = 3600
 
 CLOUDINARY_CLOUD_NAME = 'doa1nvqo9'
 CLOUDINARY_API_KEY = '699958235732942'
